<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:padding="24dp"
        tools:context=".presentation.auth.view.SignUpFragment">


        <View
            android:id="@+id/iconBackground"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/circle_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivChefIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/chef_hat"
            app:layout_constraintBottom_toBottomOf="@id/iconBackground"
            app:layout_constraintEnd_toEndOf="@id/iconBackground"
            app:layout_constraintStart_toStartOf="@id/iconBackground"
            app:layout_constraintTop_toTopOf="@id/iconBackground"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvWelcomeTitle"
            style="@style/TextDisplayLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/join_us"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconBackground" />

        <TextView
            android:id="@+id/tvSubtitle"
            style="@style/TextBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_your_culinary_journey_today"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/email_address"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/colorTextSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpEmail"
                style="@style/TextBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/colorTextSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPassword"
                style="@style/TextBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/colorTextSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpConfirmPassword"
                style="@style/TextBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/TextButtonCustom"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="@color/colorOnPrimary"
            app:cornerRadius="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword" />


        <LinearLayout
            android:id="@+id/signUpContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            app:layout_constraintVertical_bias="1">

            <TextView
                android:id="@+id/tvDontHaveAccount"
                style="@style/TextBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/tvLoginUpLink"
                style="@style/TextBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/log_in"
                android:textColor="@color/colorSecondary" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
