<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".presentation.search.view.SearchFragment">

    <TextView
        android:id="@+id/tvDiscoverTitle"
        style="@style/TextDisplayLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/discover"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/searchCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="28dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiscoverTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">


            <ImageView
                android:id="@+id/ivSearchIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/search_icon"
                app:tint="@color/colorTextSecondary" />

            <EditText
                android:id="@+id/etSearch"
                style="@style/TextBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_recipes_ingredients"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        app:chipSpacing="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        app:singleLine="false"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/categories"
            android:textColor="@color/colorTertiary"
            android:textSize="14sp"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/colorSurface2"
            app:chipCornerRadius="16dp"
            app:chipStrokeWidth="0dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/countries"
            android:textColor="@color/colorTertiary"
            android:textSize="14sp"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/colorSurface2"
            app:chipCornerRadius="16dp"
            app:chipStrokeWidth="0dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/ingredients"
            android:textColor="@color/colorTertiary"
            android:textSize="14sp"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/colorSurface2"
            app:chipCornerRadius="16dp"
            app:chipStrokeWidth="0dp" />


    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllCategories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:spanCount="2"
        tools:listitem="@layout/search_item" />


</androidx.constraintlayout.widget.ConstraintLayout>


