<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".OnboardingThirdFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/imageCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <ImageView
            android:id="@+id/imageOnboarding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Welcome To Around The World In 80 Meals"
            android:scaleType="centerCrop"
            android:src="@drawable/onboardingthree"
            tools:src="@drawable/onboardingthree" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextDisplayLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/plan_your_week"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCard" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/TextBodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/save_your_favorites_and_schedule_your_meals_with_our_intuitive_planner"
        android:textColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <LinearLayout
        android:id="@+id/pageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <View
            android:id="@+id/indicator2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/inactive_onboarding_indicator" />


        <View
            android:id="@+id/indicator3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/inactive_onboarding_indicator" />

        <View
            android:id="@+id/indicator1"
            android:layout_width="32dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/active_onboarding_indicator" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/TextButtonCustom"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/get_started"
        android:textColor="@color/colorOnPrimary"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>






